Module9/ingressfanout/ingress.yml
# An Ingress Simple Fanout allows Exposing multiple services :q!to different paths of the same host  
# using different paths
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /k8s
        backend:
          serviceName: webk8sbirthday-v1
          servicePort: 80
      - path: /openstack
        backend:
          serviceName: webk8sbirthday-v2
          servicePort: 80
